--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -1873,9 +1873,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (splamici)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "splamici"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
