update tolerances section

--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1222,14 @@
    "source": [
     "## Controlling the error tolerances in pre- and post-equilibration <a name=\"error_tolerances\"></a>\n",
     "\n",
-    "When solving ODEs or DAEs, AMICI uses the default logic of CVODES and IDAS to control error tolerances. This means that error weights are computed based on the absolute error tolerances and the product of current state variables of the system and their respective relative error tolerances. If this error combination is then controlled.\n",
+    "When solving ODEs or DAEs, AMICI uses the default logic of CVODES and IDAS to control error tolerances. This means that error weights are computed based on the absolute error tolerances and the product of current state variables of the system and their respective relative error tolerances.\n",
+    "\n",
+    "To find a steady state, numerical integration is performed until time derivatives $\\dot{\\mathbf{x}}$ become sufficiently small. Namely, until the following condition is fulfilled:\n",
+    "\n",
+    "$$\n",
+    "    \\sqrt{\\frac 1 n_x \\sum_{i=1}^{n_x} (\\dot{x}_i w_i)^2} < 1, \\quad \\text{where} \\; w_i = \\frac{1}{\\text{rtol}*x_i + \\text{atol}},\n",
+    "$$\n",
+    "`rtol` and `atol` denote relative and absolute tolerances, respectively.\n",
     "\n",
     "The respective tolerances for equilibrating a system with AMICI can be controlled by the user via the getter/setter functions `[get|set][Absolute|Relative]ToleranceSteadyState[Sensi]`:"
    ]
@@ -1242,16 +1249,16 @@
      "text": [
       "\n",
       "ODE solver steps, which were necessary to reach steady state:\n",
-      "lax tolerances:  [[  0 774   0]]\n",
-      "strict tolerances:  [[   0 1104    0]]\n",
+      "lax tolerances:  [[0 0 0]]\n",
+      "strict tolerances:  [[0 0 0]]\n",
       "\n",
       "simulation time corresponding to steady state:\n",
-      "6.189649066270984\n",
-      "34.702995828419795\n",
+      "nan\n",
+      "nan\n",
       "\n",
       "computation time to reach steady state:\n",
-      "9.676\n",
-      "13.181\n"
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
@@ -1290,6 +1297,13 @@
     "print(rdata_reduced_lax['preeq_cpu_time'])\n",
     "print(rdata_reduced_strict['preeq_cpu_time'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
