try pip install in notebook

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -22,6 +22,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7323a4fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install pypesto"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "5f94310d-d95c-4fb5-bd1e-a29bb1c92a30",
    "metadata": {
