add fides package to example notebook

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pypesto"
+    "%pip install pypesto[fides]"
    ]
   },
   {
