split pip pypesto and fide

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -27,7 +27,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pypesto[fides]"
+    "%pip install pypesto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78dbeefe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install fides"
    ]
   },
   {
