use single core engine on github actions

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -85,13 +85,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2a366ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set default pypesto engine/optimizer\n",
+    "pypesto_optimizer = pypesto.optimize.FidesOptimizer(verbose=logging.WARNING)\n",
+    "pypesto_engine = pypesto.engine.MultiProcessEngine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "21eca425",
    "metadata": {},
    "outputs": [],
    "source": [
     "# If running as a Github action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv('GITHUB_ACTIONS') is not None:\n",
-    "    n_starts = 2"
+    "    n_starts = 2\n",
+    "    pypesto_engine = pypesto.engine.SingleCoreEngine()"
    ]
   },
   {
@@ -385,8 +398,8 @@
     "        pypesto_problem,\n",
     "        n_starts=n_starts,\n",
     "        ids=new_ids,\n",
-    "        optimizer=pypesto.optimize.FidesOptimizer(verbose=logging.WARNING),\n",
-    "        engine=pypesto.engine.MultiProcessEngine(),\n",
+    "        optimizer=pypesto_optimizer,\n",
+    "        engine=pypesto_engine,\n",
     "        result=pypesto_result,\n",
     "    )"
    ]
@@ -914,8 +927,8 @@
     "            regproblem,\n",
     "            n_starts=n_starts,\n",
     "            ids=new_ids,\n",
-    "            optimizer=pypesto.optimize.FidesOptimizer(verbose=logging.WARNING),\n",
-    "            engine=pypesto.engine.MultiProcessEngine(),\n",
+    "            optimizer=pypesto_optimizer,\n",
+    "            engine=pypesto_engine,\n",
     "            result=regresult,\n",
     "        )\n",
     "    \n",
@@ -1460,8 +1473,8 @@
     "            regproblem,\n",
     "            n_starts=n_starts,\n",
     "            ids=new_ids,\n",
-    "            optimizer=pypesto.optimize.FidesOptimizer(verbose=logging.WARNING),\n",
-    "            engine=pypesto.engine.MultiProcessEngine(),\n",
+    "            optimizer=pypesto_optimizer,\n",
+    "            engine=pypesto_engine,\n",
     "            result=regresult,\n",
     "        )\n",
     "    \n",
