--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -104,6 +104,7 @@
     "# If running as a Github action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv('GITHUB_ACTIONS') is not None:\n",
     "    n_starts = 2\n",
+    "    pypesto_optimizer = pypesto.optimize.FidesOptimizer(verbose=logging.WARNING, options=dict(maxiter=10))\n",
     "    pypesto_engine = pypesto.engine.SingleCoreEngine()"
    ]
   },
