even less work whe running Github actions

--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -897,6 +897,8 @@
    "source": [
     "# Try different regularization strengths\n",
     "regstrengths = np.asarray([1.0, 20.0, 40.0, 60.0, 80.0])\n",
+    "if os.getenv('GITHUB_ACTIONS') is not None:\n",
+    "    regstrengths = np.asarray([60.0])\n",
     "regproblems = {}\n",
     "regresults = {}\n",
     "\n",
@@ -1443,6 +1445,8 @@
    "source": [
     "# Try different regularization strengths\n",
     "regstrengths = np.asarray([1.0, 5.0, 20.0, 40.0, 60.0, 100.0])\n",
+    "if os.getenv('GITHUB_ACTIONS') is not None:\n",
+    "    regstrengths = np.asarray([40.0])\n",
     "regproblems = {}\n",
     "regresults = {}\n",
     "\n",
