--- a/python/examples/example_splines/ExampleSplines.ipynb
+++ b/python/examples/example_splines/ExampleSplines.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of using a constant parameter $f$, we want to use a smooth time-dependent function $f(t)$ whose value is known only at a finite number of time instants. The value of $f(t)$ outside such grid points needs to be smoothly interpolated. Several methods have been developed for this problem over the years; AMICI at the moment supports only cubic Hermite splines."
+    "Instead of using a constant parameter $f$, we want to use a smooth time-dependent function $f(t)$ whose value is known only at a finite number of time instants. The value of $f(t)$ outside such grid points needs to be smoothly interpolated. Several methods have been developed for this problem over the years; AMICI at the moment supports only [cubic Hermite splines](https://en.wikipedia.org/wiki/Cubic_Hermite_spline)."
    ]
   },
   {
