--- a/python/examples/example_splines/ExampleSplines.ipynb
+++ b/python/examples/example_splines/ExampleSplines.ipynb
@@ -233,18 +233,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.560000000000000\n",
-      "-4.60000000000000\n",
-      "0.0416666666666672\n"
+      "spline value at 0.3 = -0.560000000000000\n",
+      "spline derivative at 0.3 = -4.60000000000000\n",
+      "spline integral between 0 and 1 = 0.0416666666666672\n"
      ]
     }
    ],
    "source": [
     "# This spline object can be evaluated at any point\n",
     "# and so can its derivative/integral\n",
-    "print(spline.evaluate(0.3))\n",
-    "print(spline.derivative(0.3))\n",
-    "print(spline.integrate(0.0, 1.0))"
+    "print(f\"spline value at 0.3 = {spline.evaluate(0.3)}\")\n",
+    "print(f\"spline derivative at 0.3 = {spline.derivative(0.3)}\")\n",
+    "print(f\"spline integral between 0 and 1 = {spline.integrate(0.0, 1.0)}\")"
    ]
   },
   {
