move spline plotting to library

--- a/python/examples/example_splines/ExampleSplines.ipynb
+++ b/python/examples/example_splines/ExampleSplines.ipynb
@@ -85,20 +85,7 @@
     "        ax.plot(rdata['t'], rdata['x'])\n",
     "        ax.set_xlabel(\"time\")\n",
     "        ax.set_ylabel(\"concentration\")\n",
-    "    return model, rdata\n",
-    "\n",
-    "def plot_spline(spline, parameters=None, xlim=None):\n",
-    "    if parameters is None:\n",
-    "        parameters = {}\n",
-    "    if xlim is None:\n",
-    "        xx = np.asarray(spline.xx)\n",
-    "        xlim = (float(xx[0]), float(xx[-1]))\n",
-    "    xx = np.linspace(*xlim, 100)\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.plot(xx, [float(spline.evaluate(x).subs(parameters)) for x in xx])\n",
-    "    ax.plot(spline.xx, [float(y.subs(parameters)) for y in spline.yy], 'o')\n",
-    "    ax.set_xlabel(\"time\")\n",
-    "    ax.set_ylabel(\"spline value\")"
+    "    return model, rdata"
    ]
   },
   {
@@ -265,7 +252,7 @@
    ],
    "source": [
     "# Plot the spline\n",
-    "plot_spline(spline)"
+    "spline.plot(xlabel='time')"
    ]
   },
   {
@@ -513,7 +500,7 @@
     }
    ],
    "source": [
-    "plot_spline(spline, parameters)"
+    "spline.plot(parameters, xlabel='time')"
    ]
   },
   {
@@ -616,7 +603,7 @@
     }
    ],
    "source": [
-    "plot_spline(spline)"
+    "spline.plot(xlabel='time')"
    ]
   },
   {
@@ -710,7 +697,7 @@
     }
    ],
    "source": [
-    "plot_spline(spline, xlim=(0, 1.5))"
+    "spline.plot(xlabel='time', xlim=(0, 1.5))"
    ]
   },
   {
@@ -796,7 +783,7 @@
     }
    ],
    "source": [
-    "plot_spline(spline, xlim=(0, 3))"
+    "spline.plot(xlabel='time', xlim=(0, 3))"
    ]
   },
   {
@@ -882,7 +869,7 @@
     }
    ],
    "source": [
-    "plot_spline(spline)"
+    "spline.plot(xlabel='time')"
    ]
   },
   {
@@ -937,7 +924,7 @@
     }
    ],
    "source": [
-    "plot_spline(spline)"
+    "spline.plot(xlabel='time')"
    ]
   },
   {
@@ -999,7 +986,7 @@
    ],
    "source": [
     "# This spline assumes negative values!\n",
-    "plot_spline(spline)"
+    "spline.plot(xlabel='time')"
    ]
   },
   {
@@ -1036,7 +1023,7 @@
    "source": [
     "# Instead of under-shooting we now have over-shooting,\n",
     "# but at least the \"spline\" is always positive\n",
-    "plot_spline(spline)"
+    "spline.plot(xlabel='time')"
    ]
   },
   {
